<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.like.LikeButton
        android:id="@+id/songLike"
        android:layout_centerVertical="true"
        app:circle_start_color="@android:color/white"
        app:icon_type="heart"
        app:icon_size="@dimen/dimen_20dp"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/days_one"
            android:text="@string/songName"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/song_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/songDesc" />
    </LinearLayout>

    <ImageButton
        android:contentDescription="@string/overflow_options"
        android:background="@android:color/white"
        android:id="@+id/song_overflow_button"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_more_vert_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>